2017 September xyz
------------------
Release Candidate 5 (RC5)
- information about any Locomotive's function

2017 September 10th
-------------------
Release Candidate 4 (RC4)
- ui restructuring of the locomotive control window
- locomotives can have images/photos for better recognition
- toggle locomotive switches during route cruising
- several improvements
- first step tutorial and project

2017 September 8th
------------------
Release Candidate 3 (RC3)
- multiview of tracks, distributable to different monitors, free dockable 
- multiviews of locomotive controls
- functions can be categorized
- functions are triggers when s88 event are triggered, e.g. smoke is switched on or off
- provide a trigger for updating the visualization
- provide pdf print dialog to generate a pdf version of the trackplan

2017 September 5th 
------------------
Release Candidate 2 (RC2)
- visualization of target block of a route, the locomotive is shown with the color green
- instead of arrows (i.e. '>' and '<') letters are shown (i.e. 'F' and 'B') for providing information in which direction a locomotive is driving, i.e. F:=Forward and B:=Backward
- allow to Lock/Unlock specific Locomotives, therfor they will not be started automatically within Automode
- allow to open the project directory direct by using the "Project / Show Project Directory"
- Sync of project Locomotives with Locomotives configured by the ESU ECoS command station
- provide "stop all trains" and "restart all trains"

2017 September 2nd
------------------
Release Candidate (RC)